fix spacing from update

--- a/bigcats/sass/style.scss
+++ b/bigcats/sass/style.scss
@@ -134,6 +134,7 @@ ul.mainwidget li.bigcats-widget-nopadding {
 
 // bottom widget area - cop'd from mainwidget styling as base.
 ul.bottomwidget{
+	clear: both;
 	list-style-type: none;
 	margin: 0px;
 	padding: 0px;
